--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^3.10.0",
+    "react-icons": "^3.11.0",
     "react-lottie": "^1.2.3",
     "react-pdf": "^4.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "yarn": "^1.22.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
